test/log/reduction/vsardotaccq_vv_i32.txt
vsardotaccq_vv_i32.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsardotaccq_vv_i32.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsardotaccq_vv_i32.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vsardotaccq_vv_i32.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vsardotaccq_vv_i32.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vsardotaccq_vv_i32.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vsardotaccq_vv_i32.c:22:6: warning: no previous prototype for 'vsardotaccq_vv_i32_golden' [-Wmissing-prototypes]
   22 | void vsardotaccq_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~
vsardotaccq_vv_i32.c: In function 'vsardotaccq_vv_i32_golden':
vsardotaccq_vv_i32.c:24:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   24 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vsardotaccq_vv_i32.c:24:1: note: each undeclared identifier is reported only once for each function it appears in
vsardotaccq_vv_i32.c:24:9: error: expected ';' before 'Line'
   24 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vsardotaccq_vv_i32.c:22:41: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vsardotaccq_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |                                ~~~~~~~~~^
vsardotaccq_vv_i32.c:22:52: warning: unused parameter 'b' [-Wunused-parameter]
   22 | void vsardotaccq_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |                                           ~~~~~~~~~^
vsardotaccq_vv_i32.c:22:63: warning: unused parameter 'c' [-Wunused-parameter]
   22 | void vsardotaccq_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |                                                      ~~~~~~~~~^
vsardotaccq_vv_i32.c:22:74: warning: unused parameter 'exp_result' [-Wunused-parameter]
   22 | void vsardotaccq_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |                                                                 ~~~~~~~~~^~~~~~~~~~
vsardotaccq_vv_i32.c: In function 'main':
vsardotaccq_vv_i32.c:45:38: error: macro "data_init_scalar" requires 3 arguments, but only 2 given
   45 |     data_init_scalar(accum, exp_accum);
      |                                      ^
vsardotaccq_vv_i32.c:11: note: macro "data_init_scalar" defined here
   11 |  #define data_init_scalar(a, b, threshold) \
      | 
vsardotaccq_vv_i32.c:45:5: error: 'data_init_scalar' undeclared (first use in this function)
   45 |     data_init_scalar(accum, exp_accum);
      |     ^~~~~~~~~~~~~~~~
vsardotaccq_vv_i32.c:48:49: error: incompatible type for argument 4 of 'vsardotaccq_vv_i32_golden'
   48 |     vsardotaccq_vv_i32_golden(exp_a,exp_b,exp_c,exp_accum,exp_result);
      |                                                 ^~~~~~~~~
      |                                                 |
      |                                                 enum ACCUM
vsardotaccq_vv_i32.c:22:74: note: expected 'int64_t *' {aka 'long long int *'} but argument is of type 'enum ACCUM'
   22 | void vsardotaccq_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |                                                                 ~~~~~~~~~^~~~~~~~~~
vsardotaccq_vv_i32.c:48:5: error: too many arguments to function 'vsardotaccq_vv_i32_golden'
   48 |     vsardotaccq_vv_i32_golden(exp_a,exp_b,exp_c,exp_accum,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
vsardotaccq_vv_i32.c:22:6: note: declared here
   22 | void vsardotaccq_vv_i32_golden(int64_t *a,int32_t *b,int32_t *c,int64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~
vsardotaccq_vv_i32.c:56:43: warning: format '%x' expects argument of type 'unsigned int', but argument 3 has type 'long long int' [-Wformat=]
   56 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                          ~^                             ~~~~~~~~~
      |                                           |                                   |
      |                                           unsigned int                        long long int
      |                                          %llx
vsardotaccq_vv_i32.c:56:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int64_t' {aka 'long long int'} [-Wformat=]
   56 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int64_t {aka long long int}
      |                                                               %llx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsardotaccq_vv_i32.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsardotaccq_vv_i32"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsardotaccq_vv_i32.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsardotaccq_vv_i32.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed